# gesture_id

./: CMakeLists.txt  README.md
gesture_id/: CMakeLists.txt  main.cpp
gesture_id/hardware/camera/: camera.cpp  camera.h
